--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>My third repo</h1>
     <h2>Explor github</h2>
+    <p>It so hard for me because i was a first larner</p>
     
 </body>
 </html>
