--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My third repo</h1>
     <h2>Explor github</h2>
     <p>It so hard for me because i was a first larner</p>
+    <b>the world</b>
     
 </body>
 </html>
