--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h2>Explor github</h2>
     <p>It so hard for me because i was a first larner</p>
     <b>the world</b>
-    
+    <img src="pic51.jpg" height="300px" width="300px" alt="">
 </body>
 </html>
